--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="fonts/fonts.css">
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item_no-bullit">
-            <a class="header__link_active" href="#=0">главная</a>
+            <a class="header__link header__link_active" href="#=0">главная</a>
           </li>
           <li class="header__links-list-item">
             <a class="header__link" href="#=0">посмотреть лоты</a>
@@ -24,19 +24,17 @@
           </li>
         </ul>
       </nav>
-      <div class="header__logo">
+      <a class="header__logo">
         <img 
           class="header__logo-image" 
           src="./images/logo-black.svg" 
           alt="логотип сайта"
         />
-      </div>
-      <div class="address">
-        <address class="header__address">
+      </a>
+        <address class="address header__address">
           <a href="tel:+9999555555">+9 999 555 5555</a>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          <p class="header__address-location">наб. Принсенграхт 263- 265, Амстердам</p>
-        </address>
+          <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </div>
     </header>
     <main>
@@ -94,7 +92,7 @@
               alt="логотип сайта" 
               />
             </div>
-              <h4 class="about__title">Об аукционе</h4>
+              <h2 class="about__title">Об аукционе</h2>
               <div class="about__text">
                 <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
                 <P>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </P>
@@ -103,17 +101,15 @@
         </section>
     </main>
     <footer class="footer">
-      <div class="address">
-        <address class="footer__address">
+        <address class="address footer__address">
           <a href="tel:+9999555555">+9 999 555 5555</a>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          <p class="footer__address-location">наб. Принсенграхт 263- 265, Амстердам</p>
+          <p>наб. Принсенграхт 263- 265, Амстердам</p>
         </address>
-      </div>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link_active" href="#0">главная</a>
+            <a class="footer__menu-link footer__menu-link_active" href="#0">главная</a>
           </li>
           <li class="footer__menu-list-item">
             <a class="footer__menu-link" href="#0">посмотреть лоты</a>
@@ -125,25 +121,31 @@
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <img 
-          class="footer__social-link" 
-          src="/images/yt.svg" 
-          alt="иконка ютуб"
-          />
+          <a class="footer__social-link" href="#0">
+            <img 
+              class="footer__social-icon" 
+              src="./images/yt.svg" 
+              alt="иконка ютуб"
+            />
+          </a>
         </li>
         <li class="footer__social-list-item">
-          <img 
-          class="footer__social-link" 
-          src="/images/vk.svg" 
-          alt="иконка в контакте"
-          />
+          <a class="footer__social-link" href="#0">
+            <img 
+              class="footer__social-icon" 
+              src="./images/vk.svg" 
+              alt="иконка в контакте"
+            />
+          </a>
         </li>
         <li class="footer__social-list-item">
-          <img 
-          class="footer__social-link" 
-          src="/images/pinterest.svg" 
-          alt="иконка пинтерест"
-          />
+          <a class="footer__social-link" href="#0">
+            <img 
+              class="footer__social-icon" 
+              src="./images/pinterest.svg" 
+              alt="иконка пинтерест"
+            />
+          </a>
         </li>
       </ul>
     </footer>
